--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.2.4",
     "mongoose": "^6.8.0",
     "nodemon": "^2.0.20"
   }
