--- a/nginx.conf
+++ b/nginx.conf
@@ -9,15 +9,15 @@ server{
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         location /customer {
-             proxy_pass http://127.0.0.1:3000$request_uri;
+             proxy_pass http://127.0.0.1:3000;
              proxy_redirect off;
         }
         location /wallet {
-             proxy_pass http://127.0.0.1:3000$request_uri;
+             proxy_pass http://127.0.0.1:3000;
              proxy_redirect off;
         }
         location /food {
-             proxy_pass http://127.0.0.1:3000$request_uri;
+             proxy_pass http://127.0.0.1:3000;
              proxy_redirect off;
         }
     }
