--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 3000
 DB_URL = "mongodb://localhost:27017/zomato_db"
 REDIS_URL = "redis://username:authpassword@127.0.0.1:6380/4"
+
+TIME_TO_RATE_LIMITER = 1000
+NO_OF_REQUEST_PER_GIVEN_TIME = 1
