--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - uses: ./ 
     - name: Build the Docker image
     - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
