--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,24 +1,31 @@
-name: Docker Image CI
+name: ci
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    branches:
+      - "master"
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - uses: ./ 
-    - name: Build the Docker image
-    - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
-    - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-    - run: docker build -t zomato-app .
-    - run: docker tag zomato-app $DOCKER_USERNAME/zomato-app:latest
-    - run: docker push $DOCKER_USERNAME/zomato-app:latest
-      
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/clockbox:latest
